Update application package name
The package name has been changed from 'me.teamone.usercrud' to 'me.team.usercrud'. This change has been applied across the entire project, including the pom.xml file and all Java application and test files.

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.2.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>me.teamone</groupId>
+    <groupId>me.team</groupId>
     <artifactId>UserCrud</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>UserCrud</name>
