--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,10 @@ services:
     restart: always
     ports:
       - "80:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/users
+      SPRING_DATASOURCE_USERNAME: user-crud
+      SPRING_DATASOURCE_PASSWORD: user-crud
     depends_on:
       - db
 
