--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,19 @@
 version: '3.1'
 
 services:
-  user-curd:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    restart: always
-    ports:
-      - "80:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/users
-      SPRING_DATASOURCE_USERNAME: user-crud
-      SPRING_DATASOURCE_PASSWORD: user-crud
-    depends_on:
-      - db
+#  user-curd:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    restart: always
+#    ports:
+#      - "80:8080"
+#    environment:
+#      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/users
+#      SPRING_DATASOURCE_USERNAME: user-crud
+#      SPRING_DATASOURCE_PASSWORD: user-crud
+#    depends_on:
+#      - db
 
   db:
     image: postgres
