--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -5,6 +5,6 @@ spring:
     property-naming-strategy: SNAKE_CASE
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:users;MODE=PostgresSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+    url: jdbc:h2:mem:users;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
     username: user-crud
     password: user-crud
